--- a/README.org
+++ b/README.org
@@ -1,3 +1,11 @@
 * cognate-saurus
 
 This project is an API that, given a word, returns cognates or similar words in as many languages as posssible.
+
+* License
+
+This work is licensed under a [Creative Commons Attribution 4.0 International License][cc-by].
+
+* Acknowledgements
+
+Some of the data used in this project comes from the CogNet-v2.0 database. More information about the tool is available at https://github.com/kbatsuren/CogNets.
