fix: Change name of project in README

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* cognate-saurus
+* cognosaurus
 
 This project is an API that, given a word, returns cognates or similar words in as many languages as posssible.
 
